--- a/ml-services/requirements.txt
+++ b/ml-services/requirements.txt
@@ -1,6 +1,9 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
+pandas==2.0.3
+numpy==1.24.3
 scikit-learn==1.3.0
 python-multipart==0.0.6
 python-dotenv==1.0.0
 psutil==5.9.5
+pydantic-settings==2.0.3
