--- a/ml-services/.gitignore
+++ b/ml-services/.gitignore
@@ -203,3 +203,10 @@ uploads/
 # Local development
 .local/
 local/
+# Environment variables
+.env
+.env.local
+.env.production
+.env.staging
+
+.gitignore
