--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,14 @@
     "@types/http-status-codes": "^1.2.0",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
+    "csv-parser": "^3.2.0",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "pnpm": "^10.16.0",
-    "prisma": "^6.16.1"
+    "prisma": "^6.16.1",
+    "xlsx": "^0.18.5"
   },
   "name": "backend",
   "version": "1.0.0",
@@ -28,7 +31,9 @@
     "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.3.3",
+    "@types/xlsx": "^0.0.36",
     "nodemon": "^3.1.10",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
