--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,9 @@
     "multer": "^2.0.2",
     "pnpm": "^10.16.0",
     "prisma": "^6.16.1",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "axios": "^1.6.0",
+    "dotenv": "^16.4.5"
   },
   "name": "backend",
   "version": "1.0.0",
