--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
     "multer": "^2.0.2",
     "pnpm": "^10.16.0",
     "prisma": "^6.16.1",
+    "sanitize-filename": "^1.6.3",
+    "ws": "^8.18.3",
     "xlsx": "^0.18.5"
   },
   "name": "backend",
@@ -33,6 +35,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.3.3",
+    "@types/ws": "^8.18.1",
     "@types/xlsx": "^0.0.36",
     "nodemon": "^3.1.10",
     "ts-node-dev": "^2.0.0",
