--- a/backend/package.json
+++ b/backend/package.json
@@ -41,6 +41,7 @@
     "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.3",
     "@types/express-serve-static-core": "^5.0.7",
+    "@types/cors": "^2.8.14",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.3.3",
